--- a/_sass/components/_community.scss
+++ b/_sass/components/_community.scss
@@ -17,8 +17,14 @@
   .blog {
     background-color: #fff;
   }
+
+
 }
 
 .community__info--outer {
   margin-bottom: 2.25rem;
+
+  .btn {
+    // margin-bottom: 1rem;
+  }
 }
